flux/infrastructure/media/jellyseerr/ingress.yaml
# Auto-split from cluster files
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-jellyseerr-role-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - requests.becklab.cloud
    secretName: jellyseerr-tls
  rules:
  - host: requests.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyseerr
            port:
              number: 5055
